--- a/app/src/main/res/layout/activity_first_b.xml
+++ b/app/src/main/res/layout/activity_first_b.xml
@@ -1,16 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/backLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".First_b">
+    android:orientation="vertical"
+    tools:context=".Login">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="SECUROSERV"
-        tools:layout_editor_absoluteX="162dp"
-        tools:layout_editor_absoluteY="320dp" />
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginBottom="50dp"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:contentDescription="@string/main_logo"
+            android:src="@drawable/securoserv_logo" />
+
+        <ImageView
+            android:layout_marginTop="25dp"
+            android:layout_marginBottom="25dp"
+            android:id="@+id/cargo_warehouse"
+            android:layout_width="266dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:contentDescription="@string/main_logo"
+            android:background="@drawable/imageview_border"
+            android:src="@drawable/car_warehouse" />
+
+        <Button
+            android:layout_gravity="center"
+            android:id="@+id/cargo_warehouse_button"
+            android:layout_width="266dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="25dp"
+            android:background="@drawable/round_shape_btn_white"
+            android:text="Exportación De Vehículos"
+            android:onClick="startLogin"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/car_warehouse"
+            android:layout_width="266dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="25dp"
+            android:contentDescription="@string/main_logo"
+            android:background="@drawable/imageview_border"
+            android:src="@drawable/cargo_warehouse" />
+
+        <Button
+            android:layout_gravity="center"
+            android:id="@+id/car_warehouse_button"
+            android:layout_width="266dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/round_shape_btn_white"
+            android:text="Mercancia Especial"
+            android:onClick="startLogin"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+
+
+</RelativeLayout>
