--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -82,7 +82,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="-50dp" />
+        android:layout_marginBottom="-50dp"
+        android:visibility="invisible"/>
 
 
 </RelativeLayout>
