--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -19,7 +19,7 @@
         <ImageView
             android:id="@+id/logo"
             android:layout_width="wrap_content"
-            android:layout_height="300dp"
+            android:layout_height="350dp"
             android:layout_gravity="center"
             android:contentDescription="@string/main_logo"
             android:src="@drawable/logo" />
@@ -57,44 +57,19 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="Ingrese Su Correo"
-            android:inputType="textPassword"
+            android:inputType="textEmailAddress"
             android:textColor="@android:color/white"
             android:textColorHint="@android:color/white"
             android:textColorLink="@color/colorAccent"
             android:textStyle="bold"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="40dp"
             android:theme="@style/LoginTextFields" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:orientation="horizontal"
-            android:layout_marginBottom="20dp">
-
-            <ImageView
-                android:id="@+id/profileImage"
-                android:background="@drawable/imageview_border"
-                android:src="@drawable/user"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_marginRight="10dp"/>
-
-            <Button
-                android:id="@+id/uploadButton"
-                android:layout_gravity="center"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/round_shape_btn_white"
-                android:text="Subir Imagen"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold" />
-
-        </LinearLayout>
 
         <Button
             android:id="@+id/registerButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="registerUser"
             android:background="@drawable/round_shape_btn_white"
             android:text="Registrar Usuario"
             android:textColor="@color/colorPrimary"
